# MANGO-MM-FUNDS

./: .gitignore  Anchor.toml  Cargo.toml  README copy.md  README.md  package.json
.anchor/workspace/: LICENSE
.anchor/workspace/program/: Cargo.toml
.anchor/workspace/program/src/: processor.rs
.anchor/workspace/program/tests/: test_investin_mm.rs
.anchor/workspace/program/tests/program_test/: cookies.rs  mod.rs  scenarios.rs
frontend/: .env  README.md  package.json
frontend/src/: App.css  App.js
frontend/src/components/: AllFundsInvestors.js  ClaimFee.js  ConnectWalletModal.js  CustomNavbar.js  Deposit.js  DisplayInfo.js  ForceProcessWithdraws.js  ForceUpdatePerp.js  ForceUpdateSpot.js  InitForceSettle.js  InitialisedFund.js  MangoPlaceOrder.js  ProcessDeposits.js  ProcessWithdraws.js  Reimbursement.js  Settlement.js  Transactions.js  Transfer.js  Withdraw.js  Withdraw2.js
frontend/src/programData/: GreetingAccount.js  GreetingSchema.js
frontend/src/store/: globalState.js
frontend/src/utils/: MangoLayout.js  constants.js  getTransactions.js  mango.js  notify.js  pools.js  programLayouts.js  safe-math.js  solanaWeb3.js  tokens.js  web3.js
frontend/src/utils/wallets/: PhantomWallet.js
program/: Cargo.toml
program-mm/: Cargo.toml
program-mm/src/: instruction.rs  processor.rs
program/src/: entrypoint.rs  error.rs  instruction.rs  processor.rs  state.rs
program/tests/: test_investin_mm.rs
program/tests/program_test/: cookies.rs  mod.rs  scenarios.rs
