[package]
name = "mm"
version = "0.0.2"
description = "Investin Market Making Fund"
repository = "https://github.com/Investin-pro/Solana"
license = "Apache-2.0"
homepage = "https://investin.pro/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
solana-program = "^1.7.10"
arrayref = "^0.3.6"
serde = "^1.0.118"
bs58 = "0.4.0"
bytemuck = "^1.7.2"
bincode = "^1.3.1"
fixed = { version = "1.11.0", features = ["serde"] }
fixed-macro = "^1.1.1"
enumflags2 = "^0.6.4"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "^0.5.1"
thiserror = "^1.0.24"
spl-token = { version = "^3.0.0", features = ["no-entrypoint"] }
mango = { version = "^3.5.1", git = "https://github.com/blockworks-foundation/mango-v3.git", default-features=false, features = ["no-entrypoint", "client"], branch="main" }
mango-common = {version = "3.0.0", git = "https://github.com/blockworks-foundation/mango-v3", branch = "main" }
spl-associated-token-account = { version = "1.0.5", features = ["no-entrypoint"] }
serum_dex = { rev = "7f55a5ef5f7937b74381a3124021a261cd7d7283", git = "https://github.com/blockworks-foundation/serum-dex.git", default-features=false, features = ["no-entrypoint", "program"] }





[dev-dependencies]
solana-sdk = ">=1.9.0"
solana-program-test = ">=1.9.0"
solana-logger = ">=1.9.0"
tarpc = { version = "^0.26.2", features = ["full"] }
rand = "0.8.4"


[lib]
name = "mm"
crate-type = ["cdylib", "lib"]
